:wheelchair: fix contrast ratio on footer and author label

--- a/assets/main/sass/layout/_ghost.scss
+++ b/assets/main/sass/layout/_ghost.scss
@@ -155,7 +155,7 @@
     line-height: 1em;
     font-weight: 300;
     text-transform: uppercase;
-    color: #999;
+    color: #333;
 }
 
 .author-box-name {
